<resources>
    <string name="app_name">Track\'Em</string>
    <string name="email">Introduzca un email válido.</string>
    <string name="errorcontraseña">Debe introducir más de seis carácteres.</string>
    <string name="Complete">Correcto!</string>
    <string name="Error">Error!</string>
    <string name="Upload">Cargando…</string>
    <string name="log">Iniciar Sesión</string>
    <string name="correctologin">Se ha realizado el inicio de sesión correctamente!</string>
    <string name="errorlogin">Ha fallado el inicio de sesión! Inténtelo más tarde.</string>
    <string name="mail">Email</string>
    <string name="con">Contraseña</string>
    <string name="eliminado">Este usuario ha sido eliminado!</string>
    <string name="cargando_mensajes">Cargando mensajes…</string>
    <string name="nomensaje">No hay ningún mensaje!</string>
    <string name="nombre">Introduzca su nombre!</string>
    <string name="corr">Introduzca un correo válido!</string>
    <string name="cont">Introduzca una contraseña!</string>
    <string name="corta">La contraseña introducida es demasiado corta!</string>
    <string name="nomisma">No es la misma contraseña!</string>
    <string name="notel">Introduzca un numero de telefono!</string>
    <string name="valtelf">Introduzca un telefono válido!</string>
    <string name="erregistro">No se ha podido registrar al usuario en estos momentos, intentelo más tarde!</string>
    <string name="regcorr">Se ha registrado al paciente correctamente!</string>
    <string name="info">Introduzca la información!</string>
    <string name="numero">numero</string>
    <string name="imagen">imagen</string>
    <string name="id">id</string>
    <string name="errorimagen">No se ha podido cargar la imagen correctamente</string>
    <string name="correctaimagen">La imagen se ha cargado correctamente</string>
    <string name="nombreconf">Introduzca su nombre</string>
    <string name="inicio_s">Inicio: %s</string>
    <string name="cerrarsesion">Se ha cerrado la sesión correctamente</string>
    <string name="fin_s">Fin: %s</string>
    <string name="dur">Duración: %d horas y %d minutos</string>
    <string name="camcontraseña">Cambiar Contraseña</string>
    <string name="nohayevento">No hay ningún evento en el día seleccionado!</string>
    <string name="titulo">Titulo</string>
    <string name="paciente">Paciente:</string>
    <string name="seleccione_un_paciente">Seleccione un paciente</string>
    <string name="tiempo">Tiempo:</string>
    <string name="nom">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="vuelva_a_introducir_la_contrase_a">Vuelva a introducir la contraseña</string>
    <string name="emai">Email</string>
    <string name="n_mero_de_telefon">Número de telefon</string>
    <string name="duraci_n">Duración:</string>
    <string name="seleccione_un_periodo_de_tiempo">Seleccione un periodo de tiempo</string>
    <string name="descripci_n_del_ejercicio">Descripción del ejercicio:</string>
    <string name="dificultad">Dificultad</string>
    <string name="no_hay_ning_n_ejercicio_registrado">No hay ningún ejercicio registrado!</string>
    <string name="no_hay_ning_n_paciente_registrado">No hay ningún paciente registrado!</string>
    <string name="no_hay_ning_n_suceso_extraordinario_registrado">No hay ningún suceso extraordinario registrado!</string>
    <string name="bienvenido_s">Bienvenido %s!</string>
    <string name="introduzca_su_correo_para_poder_recuperar_la_contrase_a">Introduzca su correo para poder recuperar la contraseña.</string>
    <string name="seguimiento_diario">Seguimiento Diario</string>
    <string name="c_mo_se_siente_hoy">¿Cómo se siente hoy?</string>
    <string name="suceso_extraordinario">Suceso Extraordinario</string>
    <string name="ha_ocurrido_algo_poco_frecuente">¿Ha ocurrido algo poco frecuente?</string>
    <string name="que_tal_va_su_evoluci_n">¿Que tal va su evolución?</string>
    <string name="concentraci_n">Concentración</string>
    <string name="fatiga">Fatiga</string>
    <string name="memoria">Memoria</string>
    <string name="nimo">Ánimo</string>
    <string name="energ_a">Energía</string>
    <string name="sue_o">Sueño</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="sucesos_extraordinarios">Sucesos Extraordinarios</string>
    <string name="ver_historial">Ver Historial</string>
    <string name="inicio_00_00">Inicio: 00:00</string>
    <string name="fin_00_00">Fin: 00:00</string>
    <string name="duraci_n_00_00">Duración: 00:00</string>
    <string name="qu_ha_ocurrido">¿Qué ha ocurrido?</string>
    <string name="describa_con_el_m_ximo_detalle_posible_lo_que_ha_sucedido">Describa con el máximo detalle posible lo que ha sucedido</string>
    <string name="introduzca_la_informaci_n_correspondiente">Introduzca la información correspondiente</string>
    <string name="_15_03_2020">15/03/2020</string>
    <string name="bicicleta_estatica">Bicicleta Estatica</string>
    <string name="duraci_n_1h">Duración: 1h</string>
    <string name="medicaci_n">Medicación</string>
    <string name="_19_00">19:00</string>
    <string name="inyecci_n_de_forma_subcut_nea_de_copaxone_de_20mg">Inyección de forma subcutánea de Copaxone de 20mg.</string>
    <string name="hoy_me_he_levantado_y_he_notado_un_hormigueo_en_el_brazo_derecho_y_complicaciones_al_coger_objetos">Hoy me he levantado y he notado un hormigueo en el brazo derecho y complicaciones al coger objetos.</string>
    <string name="antonio_ram_rez">Antonio Ramírez</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="ha_olvidado_su_contrase_a">¿Ha olvidado su contraseña?</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="medi">Medicación</string>
    <string name="cita">Cita</string>
    <string name="perfil_personal">Perfil Personal</string>
    <string name="no_hay_datos_a_mostrar">No hay datos a mostrar</string>
    <string name="cnombre">notificaciones</string>
    <string name="cdesc">notificicaciones usuarios</string>
</resources>
