<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Pacientes.RegistroEjercicio">
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/duraci_n"/>
        <TextView
            android:layout_width="0dp"
            android:id="@+id/dur"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/seleccione_un_periodo_de_tiempo"/>
        <com.github.nikartm.button.FitButton
            android:id="@+id/seleccionarPaciente"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:enabled="true"
            android:gravity="center"
            android:onClick="seleccionarDuracion"
            app:fb_cornerRadius="20dp"
            android:layout_marginTop="15dp"
            app:fb_backgroundColor="@color/button"
            android:layout_marginBottom="15dp"
            app:fb_divColor="@color/button"
            android:layout_marginEnd="10dp"
            app:fb_shape="rectangle"
            app:fb_text="Modificar Tiempo"
            app:fb_textSize="15dp"
            app:fb_textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">
        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:elevation="30dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            card_view:cardCornerRadius="20dp"
            card_view:cardUseCompatPadding="true"
            tools:ignore="NamespaceTypo">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/informacion"
                android:layout_margin="15dp"
                android:hint="@string/descripci_n_del_ejercicio"
                android:orientation="vertical">
            </EditText>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/nimo"
            android:textStyle="bold"
            android:layout_height="wrap_content">
        </TextView>
        <com.hsalf.smilerating.SmileRating
            android:id="@+id/smile_animo"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/fatiga"
            android:layout_height="wrap_content">
        </TextView>
        <com.hsalf.smilerating.SmileRating
            android:id="@+id/smile_fatiga"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/dificultad"
            android:layout_height="wrap_content">
        </TextView>
        <com.hsalf.smilerating.SmileRating
            android:id="@+id/smile_dificultad"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.github.nikartm.button.FitButton
        android:id="@+id/crearevento"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:enabled="true"
        android:onClick="guardarEjercicio"
        android:gravity="center"
        app:fb_backgroundColor="@color/button"
        app:fb_cornerRadius="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:fb_divColor="@color/button"
        android:layout_marginEnd="10dp"
        app:fb_shape="rectangle"
        app:fb_text="Guardar"
        app:fb_textSize="15dp"
        app:fb_textColor="@color/black" />
</LinearLayout>