<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/drawable_fondo"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Compartidas.SeleccionarDuracion">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/init"
        android:layout_width="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/inicio_00_00"
        android:layout_marginEnd="30dp"
        android:gravity="start"
        />

        <TextView
            android:id="@+id/fin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:text="@string/fin_00_00"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dur"
            android:layout_width="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/duraci_n_00_00"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            />
    </LinearLayout>
    <com.yinglan.circleviewlibrary.CircleAlarmTimerView
        android:id="@+id/circletimerview"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
         />

    <com.github.nikartm.button.FitButton
        android:id="@+id/crearevento"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:enabled="true"
        android:onClick="guardar"
        android:gravity="center"
        app:fb_backgroundColor="@color/button"
        app:fb_cornerRadius="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:fb_divColor="@color/button"
        android:layout_marginEnd="10dp"
        app:fb_shape="rectangle"
        app:fb_text="Guardar"
        app:fb_textSize="15dp"
        app:fb_textColor="@color/black" />

</LinearLayout>