<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".PersonalMedico.CrearCita">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titulo"
        android:layout_marginStart="20dp"
        android:hint="@string/titulo"
        android:layout_marginEnd="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/paciente"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/pacientesel"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/seleccione_un_paciente"/>
        <com.github.nikartm.button.FitButton
            android:id="@+id/seleccionarPaciente"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:onClick="seleccionpaciente"
            android:enabled="true"
            android:gravity="center"
            app:fb_cornerRadius="20dp"
            android:layout_marginTop="15dp"
            app:fb_backgroundColor="@color/button"
            android:layout_marginBottom="15dp"
            app:fb_divColor="@color/button"
            android:layout_marginEnd="10dp"
            app:fb_shape="rectangle"
            app:fb_text="Seleccionar\n Paciente"
            app:fb_textSize="15dp"
            app:fb_textColor="@color/black" />
    </LinearLayout>
    <com.isapanah.awesomespinner.AwesomeSpinner
        android:id="@+id/my_spinner"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:id="@+id/tiempo"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/tiempo"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/dur"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/seleccione_un_periodo_de_tiempo"/>
        <com.github.nikartm.button.FitButton
            android:id="@+id/seleccionarduración"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:enabled="true"
            android:gravity="center"
            app:fb_cornerRadius="20dp"
            app:fb_backgroundColor="@color/button"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:onClick="seleccionarDuracion"
            app:fb_divColor="@color/button"
            android:layout_marginEnd="10dp"
            app:fb_shape="rectangle"
            app:fb_text="Seleccionar\n Tiempo"
            app:fb_textSize="15dp"
            app:fb_textColor="@color/black" />
    </LinearLayout>
    <com.github.nikartm.button.FitButton
        android:id="@+id/crearevento"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:enabled="true"
        android:onClick="createEvent"
        android:gravity="center"
        app:fb_backgroundColor="@color/button"
        app:fb_cornerRadius="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:fb_divColor="@color/button"
        android:layout_marginEnd="10dp"
        app:fb_shape="rectangle"
        app:fb_text="Guardar Evento"
        app:fb_textSize="15dp"
        app:fb_textColor="@color/black" />
</LinearLayout>