<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Pacientes.Seguimiento">
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:onClick="seguimientoDiario"
        card_view:cardCornerRadius="35dp"
        android:backgroundTint="@color/button"
        card_view:cardUseCompatPadding="true"
        app:ignore="NamespaceTypo">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:gravity="center">
            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="10dp"
                    android:src="@drawable/seguimientodiario"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/seguimiento_diario"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textSize="25dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/c_mo_se_siente_hoy"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:onClick="sucesoExtraordinario"
        card_view:cardCornerRadius="35dp"
        android:backgroundTint="@color/button"
        card_view:cardUseCompatPadding="true"
        app:ignore="NamespaceTypo">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:gravity="center">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:src="@drawable/sucesoextraordinario"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/suceso_extraordinario"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textSize="25dp"
                    android:id="@+id/desc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/ha_ocurrido_algo_poco_frecuente"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/tools"
        android:orientation="horizontal"
        card_view:cardCornerRadius="35dp"
        android:onClick="verHistorial"
        android:backgroundTint="@color/button"
        android:id="@+id/card"
        card_view:cardUseCompatPadding="true"
        app:ignore="NamespaceTypo">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:gravity="center">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:src="@drawable/historial"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/ver_historial"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textSize="25dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/que_tal_va_su_evoluci_n"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>